fix(FT-001): Full-stack integration fixes — FE routing, BE adapters, validation
BE fixes:
- Add missing infrastructure adapters (SecurityConfig, JacksonConfig, stubs)
- Fix Jackson UPPER_SNAKE naming + disable WRITE_DATES_AS_TIMESTAMPS
- Fix controller: map lines from CreateOrderRequest to command (was null)
- Fix PayOrderMapper: return mutable ArrayList instead of immutable .toList()
- Fix PayOrderRepositoryAdapter: flush after deleteByOrderId to prevent PK conflict
- Add userId fallback ("anonymous") in SubmitOrderService for no-auth FE
- Add null-safe defaults in AuditLogRepositoryAdapter

FE fixes:
- Replace useNavigate with useAppNavigate in Edit/View/Approve/List pages
- Fix navigate → nav in useCallback dependency arrays (12 places)
- Fix useOptimisticLock: remove forceUpdate from setEtag, useMemo for stable ref
- Add maxLength attributes to SenderTab/ReceiverTab inputs
- Add cross-field validation: AMOUNT must equal sum of LINE_AMOUNT
- Fix API client resource path (/pay-out-manual)

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>